# polizai

./: .env.template  .gitignore  GetData.sh  README.md  REQUIREMENTS.md  TODO.txt  export.py  k8s_deploy.sh  local_start.sh
back/: Cargo.toml  Dockerfile  Dockerfile.test  Rocket.toml.orig  docker-compose.yml
back/k8s/: deployment.yaml  hpa.yaml  (+3 more)
backend/: Cargo.toml  Cargo.toml.markov
consuming-rest-apis/: package.json
data_worker/: .gitignore  Cargo.toml  EDGAR_fossil_CO2_by_sector_and_countr.csv  EDGAR_fossil_CO2_totals_by_country.csv  EDGARv5.0_FT2019_fossil_CO2_booklet2020.xls  GetData.sh  README.md  data.js  data_json_temp
database/: Dockerfile  EDGAR_fossil_CO2_by_sector_and_countr.csv  EDGAR_fossil_CO2_totals_by_country.csv  GetData.sh  GetData_JSON.sh  README.md  env.template  full_datadump.sql  schemas  schemas.sql  schemas_n_data.sql  schemas_n_data_co2.sql  schemas_n_data_population.sql
front/: Dockerfile  README.md  package-lock.json  package.json
front_html/: CSS_README.md  index.html  style.css
frontend/: index.html  package-lock.json
game-of-life/: Cargo.toml  LICENSE_MIT
language-generator/: Pipfile  main.py  markov.py
phrase_backend/: Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.old  Dockerfile.old.alpine  README
phrase_backend/alpine/: Dockerfile
phrase_backend/k8s/: deployment.yaml  service.yaml
phrase_backend/src/: api.rs  lang.rs  main.rs
phrase_frontend/: .env.orig  Dockerfile.prod  Dockerfile.run  env.prod  env.sh  package-lock.json  package.json  run
webcontainer/: Cargo.toml
wpa_example/: index.html
(+86 files in other folders)
