[package]
name = "phrase_backend"
version = "0.1.0"
authors = ["Angel Alonso Fonseca <alonsofonseca.angel@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
warp = "0.2"
thiserror = "1.0.20"
rocket = "0.4.6"
itertools = "0.8"
rand = "0.6"
regex = "1.1"
structopt = "0.2"
